test/libsolidity/syntaxTests/storageLayoutSpecifier/bitwise_negation_after_cast.sol
contract C layout at ~uint(0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF) {}
// ----
// TypeError 1505: (21-94): The base slot expression cannot be evaluated during compilation.
